change: png path

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- Header / Hero -->
   <header class="min-h-screen flex flex-col items-center justify-center text-center px-6 sm:px-8 lg:px-16">
     <div class="mb-6">
-      <img src="/assets/your-icon2.png" alt="Your Icon" class="w-24 h-24 sm:w-32 sm:h-32 rounded-full border-4 border-[var(--accent-start)]" />
+      <img src="./assets/your-icon2.png" alt="Your Icon" class="w-24 h-24 sm:w-32 sm:h-32 rounded-full border-4 border-[var(--accent-start)]" />
     </div>
     <h1 class="font-extrabold text-[clamp(2.5rem,8vw,4rem)] text-white mb-4">TAKU</h1>
     <p class="max-w-2xl text-base sm:text-lg md:text-xl text-center mb-8 text-[var(--text-secondary)]">
