fix: png path & skills sentences

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h1 class="font-extrabold text-[clamp(2.5rem,8vw,4rem)] text-white mb-4">TAKU</h1>
     <p class="max-w-2xl text-base sm:text-lg md:text-xl text-center mb-8 text-[var(--text-secondary)]">
       20代会社員｜個人開発実践中<br>
-      個人開発／日常で使える面白いサービス
+      日常で使えるサービス/面白いサービス
     </p>
     <nav class="flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-8">
       <a href="#skills" class="accent">Skills</a>
@@ -49,7 +49,7 @@
     </nav>
   </header>
 
-  <!-- Services Section -->
+  <!-- Skills Section -->
   <section id="skills" class="py-20 px-6 sm:px-8 lg:px-16 bg-[var(--bg-secondary)]">
     <div class="max-w-7xl mx-auto">
       <h2 class="text-3xl sm:text-4xl font-bold text-center mb-12 text-transparent bg-clip-text bg-gradient-to-r from-[var(--accent-start)] to-[var(--accent-end)]">
@@ -60,25 +60,25 @@
         <div class="bg-[var(--bg-primary)] p-8 rounded-2xl shadow-xl transform hover:scale-105 transition">
           <h3 class="text-2xl font-semibold mb-4 text-white">AI / Machine Learning</h3>
           <p class="text-base mb-6 text-[var(--text-secondary)]">
-            データ分析や予測モデルの構築を得意としています。
+            ===
           </p>
-          <img src="/assets/ai-ml.png" alt="AI / Machine Learning" class="w-24 h-24 mx-auto" />
+          <img src="./assets/ai-ml.png" alt="AI / Machine Learning" class="w-24 h-24 mx-auto" />
         </div>
         <!-- UI / UX Design -->
         <div class="bg-[var(--bg-primary)] p-8 rounded-2xl shadow-xl transform hover:scale-105 transition">
           <h3 class="text-2xl font-semibold mb-4 text-white">UI / UX Design</h3>
           <p class="text-base mb-6 text-[var(--text-secondary)]">
-            ユーザー視点に立った直感的なデザインを追求します。
+            ===
           </p>
-          <img src="/assets/ui-ux.png" alt="UI / UX Design" class="w-24 h-24 mx-auto" />
+          <img src="./assets/ui-ux.png" alt="UI / UX Design" class="w-24 h-24 mx-auto" />
         </div>
         <!-- Web Development -->
         <div class="bg-[var(--bg-primary)] p-8 rounded-2xl shadow-xl transform hover:scale-105 transition">
           <h3 class="text-2xl font-semibold mb-4 text-white">Web Development</h3>
           <p class="text-base mb-6 text-[var(--text-secondary)]">
-            モダンなフロント〜バックエンドまでフルスタック対応可能。
+            ===
           </p>
-          <img src="/assets/web-dev.png" alt="Web Development" class="w-24 h-24 mx-auto" />
+          <img src="./assets/web-dev.png" alt="Web Development" class="w-24 h-24 mx-auto" />
         </div>
       </div>
     </div>
@@ -93,7 +93,7 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10">
         <!-- Checkin Cafe -->
         <div class="bg-[var(--bg-secondary)] rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
-          <img src="/assets/CheckinCafe.png" alt="Checkin Cafe" class="w-full h-48 object-cover" />
+          <img src="./assets/CheckinCafe.png" alt="Checkin Cafe" class="w-full h-48 object-cover" />
           <div class="p-6">
             <h3 class="text-xl sm:text-2xl font-semibold mb-2 text-white">Checkin Cafe</h3>
             <p class="mb-4 text-[var(--text-secondary)]">
@@ -106,7 +106,7 @@
         </div>
         <!-- Toothbrush Checker -->
         <div class="bg-[var(--bg-secondary)] rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
-          <img src="/assets/toothbrush.png" alt="Toothbrush Checker" class="w-full h-48 object-cover" />
+          <img src="./assets/toothbrush.png" alt="Toothbrush Checker" class="w-full h-48 object-cover" />
           <div class="p-6">
             <h3 class="text-xl sm:text-2xl font-semibold mb-2 text-white">歯ブラシチェッカー by YourLoop</h3>
             <p class="mb-4 text-[var(--text-secondary)]">
