add: tooth pages

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <p class="mb-4 text-[var(--text-secondary)]">
               歯ブラシの交換タイミングを教えてくれるサービス。
             </p>
-            <a href="#" class="inline-block px-5 py-2 rounded-lg bg-gradient-to-r from-[var(--accent-start)] to-[var(--accent-end)] text-sm font-medium text-white hover:from-[var(--accent-end)] hover:to-[var(--accent-start)] transition">
+            <a href="./tooth/tooth_index.html" class="inline-block px-5 py-2 rounded-lg bg-gradient-to-r from-[var(--accent-start)] to-[var(--accent-end)] text-sm font-medium text-white hover:from-[var(--accent-end)] hover:to-[var(--accent-start)] transition">
               View Details →
             </a>
           </div>
